# rl-board-game

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  connectx_mcgs.cpp  connectx_minimax.cpp  connectx_minimax_selfplay.cpp  connectx_simulator.cpp  othello_mcgs.cpp  othello_mcgs_selfplay.cpp  othello_simulator.cpp
src/game/: connectx.h  game_base.h  mcgs_search.h  minimax_search.h  othello.h  types.h  zobrist_hash.h
src/util/: type_alias.h
src/zobrist_hash/: CMakeLists.txt  zobrist_hash_gen.cpp
